open links in new tab

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
               </li> -->
               
               <li>
-                <a href="https://www.linkedin.com/in/aleazaryilma/"><img src="./images/linkdin.svg" alt="linkedin" /></a>
+                <a href="https://www.linkedin.com/in/aleazaryilma/" target="_blank"><img src="./images/linkdin.svg" alt="linkedin" /></a>
               </li>
               <li>
-                <a href="https://github.com/Agetuni"><img src="./images/github.svg" alt="github" /></a>
+                <a href="https://github.com/Agetuni" target="_blank"><img src="./images/github.svg" alt="github" /></a>
               </li>
               <li>
-                <a href="https://medium.com/@yilma4060"><img src="./images/medium.svg" alt=" medium" /></a>
+                <a href="https://medium.com/@yilma4060" target="_blank"><img src="./images/medium.svg" alt=" medium" /></a>
               </li>
               <li>
-                <a href="https://angel.co/u/aleazar-yilma-1"><img src="./images/angellist.svg" alt="angellist" /></a>
+                <a href="https://angel.co/u/aleazar-yilma-1" target="_blank"><img src="./images/angellist.svg" alt="angellist" /></a>
               </li>
             </ul>
             <div class="go-down-container">
@@ -187,20 +187,17 @@
           </form>
         </div>
         <ul class="contact-lists">
-          <!-- <li>
-            <a href="https://twitter.com/mrabdul_ali"><img src="./images/twitter.svg" alt="link to my twitter" /></a>
-          </li> -->
           <li>
-            <a href="https://www.linkedin.com/in/aleazaryilma/"><img src="./images/linkdin.svg" alt="link to my linkedin" /></a>
+            <a href="https://www.linkedin.com/in/aleazaryilma/" target="_blank"><img src="./images/linkdin.svg" alt="link to my linkedin" /></a>
           </li>
           <li>
-            <a href="https://medium.com/@yilma4060"><img src="./images/medium.svg" alt="link to my medium" /></a>
+            <a href="https://medium.com/@yilma4060" target="_blank"><img src="./images/medium.svg" alt="link to my medium" /></a>
           </li>
           <li>
-            <a href="https://github.com/Agetuni"><img src="./images/github.svg" alt="link to my github" /></a>
+            <a href="https://github.com/Agetuni" target="_blank"><img src="./images/github.svg" alt="link to my github" /></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/aleazaryilma/"><img src="./images/angellist.svg" alt="link to my angellist" /></a>
+            <a href="https://www.linkedin.com/in/aleazaryilma/" target="_blank"><img src="./images/angellist.svg" alt="link to my angellist" /></a>
           </li>
         </ul>
         <p class="email">aleazaryilma@gmail.com</p>
