update mobile version

--- a/index.html
+++ b/index.html
@@ -17,28 +17,19 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJJVXB4L13"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "G-GJJVXB4L13");
-  </script>
 </head>
 
-<body class="body">
+<body class="body" id="body">
   <section class="firstpage">
     <nav class="nav">
-      <p class="welcome">Welcome</p>
+      <p class="welcome">Aleazar Y.</p>
       <a href="#"><img class="hamburger" src="./images/Union.png" alt="hamburger menu drawer" /></a>
     </nav>
 
     <div class="wrapper">
       <ul class="header-mobile nav-items">
-        <li class="header-mobile-text item"><a class="nav-link" href="#Portfolio">Portfolio</a></li>
+        <li class="header-mobile-text item"><a class="nav-link" href="#body">Portfolio</a></li>
         <li class="header-mobile-text item"><a class="nav-link" href="#About">About</a></li>
         <li class="header-mobile-text item"><a class="nav-link" href="#Contact">Contact</a></li>
       </ul>
